# medea

./: .gitignore  README.md
demo/: CMakeLists.txt  CMakePresets.json  VkBootstrap.cpp  main.cpp  vkfw.h
demo/imgui/: imconfig.h
src/: compile.cpp  compile.h  compute.h  constants.h  context.h  core.cpp  core.h  cull.cpp  cull.h  graphics.h  gvector.h  light.cpp  light.h  meta.cpp  meta.h  metaimage.cpp  metaimage.h  primitives.h  renderentity.h  scene.cpp  scene.h  vertex.h  window.cpp  window.h
src/internal/: metacodegen.h  metaio.h
